Ensure z-indexes of Drawers and modals are correctly set

--- a/src/styles/antd-overrides/drawer.scss
+++ b/src/styles/antd-overrides/drawer.scss
@@ -9,3 +9,7 @@
 .ant-drawer-header {
   background: var(--background-l0);
 }
+
+.ant-drawer {
+  z-index: 1;
+}
