--- a/src/styles/antd-overrides/modal.scss
+++ b/src/styles/antd-overrides/modal.scss
@@ -20,3 +20,8 @@
     border-color: transparent;
   }
 }
+
+.ant-modal-wrap,
+.ant-modal-mask {
+  z-index: 1;
+}
